# Movieclub

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
comments/: api_urls.py  api_view.py  models.py  permissions.py  serializers.py
comments/migrations/: 0001_initial.py  0002_auto_20200414_2325.py  0002_auto_20200913_1953.py  0005_auto_20190814_1315.py
contents/: api_urls.py  api_view.py  models.py  permissions.py  serializers.py  views.py
contents/migrations/: 0001_initial.py  0002_auto_20190705_1903.py  0002_auto_20200414_2325.py  0002_auto_20200913_1953.py  0003_auto_20190814_1315.py  0004_auto_20190820_1147.py
core/: permissions.py
groups/: api_urls.py  api_view.py  apps.py  models.py  permissions.py  serializers.py
groups/migrations/: 0001_initial.py  0002_auto_20190705_1903.py  0002_auto_20200414_2325.py  0002_auto_20200913_1953.py
groups/tests/: test_models.py
messaging/: api_urls.py  api_view.py  models.py  permissions.py  serializers.py
messaging/migrations/: 0001_initial.py  0002_auto_20200414_2325.py  0002_auto_20200913_1953.py
movieclub/: manage.py  settings.py  split_api_urls.py  urls.py  wsgi.py
movies/: admin.py  api_urls.py  api_view.py  models.py  permissions.py  serializers.py
notifications/: api_urls.py  api_view.py  apps.py  models.py  serializers.py  signals.py
persons/: api_urls.py  api_view.py  models.py  permissions.py  serializers.py
shares/: api_urls.py  api_view.py  models.py  permissions.py  serializers.py
suggestions/: api_urls.py  api_view.py  models.py  permissions.py  serializers.py
topics/: api_urls.py  api_view.py  models.py  permissions.py  serializers.py
users/: api_urls.py  api_view.py  models.py  permissions.py  serializers.py  views.py
(+125 files in other folders)
