[tool.poetry]
name = "movieclub"
version = "0.1.0"
description = ""
authors = ["sivakumarskr <sivakumar28skr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
atomicwrites = "==1.3.0"
attrs = "==19.1.0"
certifi = "==2019.11.28"
colorama = "==0.4.1"
coverage = "==4.5.4"
django-extensions = "==2.2.1"
django-markdown = "==0.8.4"
django-markdownx = "==2.0.28"
django-phonenumber-field = "==3.0.1"
django-phonenumbers = "==1.0.1"
django-taggit = "==1.1.0"
djangorestframework = "==3.10.2"
importlib-metadata = "4.12"
more-itertools = "==7.2.0"
phonenumbers = "==8.10.16"
pluggy = "==0.12.0"
py = "==1.8.0"
pyparsing = "==2.4.2"
pytest = "==5.0.1"
pytz = "==2019.2"
six = "==1.12.0"
sqlparse = "==0.3.0"
wcwidth = "==0.1.7"
wincertstore = "==0.2"
zipp = "==0.5.2"
Babel = "==2.7.0"
Django = "==2.2.8"
Markdown = "==3.1.1"
Pillow = "==7.0.0"
Werkzeug = "==0.15.5"
django-environ = "==0.4.5"
chardet = "==3.0.4"
coreapi = "==2.3.3"
coreschema = "==0.0.4"
django-cors-headers = "==3.5.0"
django-filter = "==2.0.0"
django-rest-swagger = "==2.1.2"
djangorestframework-filters = "==1.0.0.dev0"
djangorestframework-simplejwt = "==4.4.0"
drf-nested-routers = "==0.91"
idna = "==2.10"
itypes = "==1.2.0"
openapi-codec = "==1.3.2"
requests = "==2.31.0"
rest-framework-generic-relations = "==1.2.2"
simplejson = "==3.17.2"
uritemplate = "==3.0.1"
urllib3 = "==1.25.10"
Jinja2 = "==2.11.2"
MarkupSafe = "==1.1.1"
PyJWT = "==1.7.1"
django-taggit-serializer = "^0.1.7"
psycopg2-binary = "^2.9.6"
pydotplus = "^2.0.2"
jsonschema = "3.0.2"


[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
